@startuml HU-04_Publicar_Solicitud_Prestamo
title HU-04 — Publicar Solicitud de Préstamo (Componentes)\nDeFi360 · Sprint 1 · Release 01

skinparam componentStyle rectangle
skinparam backgroundColor #FAFAFA
skinparam component {
  BackgroundColor #F9EBEA
  BorderColor #922B21
  FontSize 12
}
skinparam interface {
  BackgroundColor #FDEBD0
  BorderColor #E67E22
}
skinparam node {
  BackgroundColor #F2F3F4
  BorderColor #717D7E
}
skinparam database {
  BackgroundColor #D5F5E3
  BorderColor #1E8449
}
skinparam arrow {
  Color #2C3E50
  FontSize 10
}

' ─── FRONTEND ───────────────────────────────────────────────────
node "Frontend (React SPA)" {
  [main.jsx — Solicitud / LTV] as LoanForm
}

' ─── CONTROLADOR ────────────────────────────────────────────────
node "Backend — Controllers" {
  [loanController\n(requestLoan / calculateLTV / matchLoan)] as LoanCtrl
}

' ─── INTERFACES (DIP) ───────────────────────────────────────────
interface "IPriceOracle" as IOracle
interface "ICollateralService" as IColat
interface "ILoanFactory" as ILoanFact

' ─── SERVICIOS ──────────────────────────────────────────────────
node "Backend — Services" {
  [CollateralService] as ColSvc
  [LTVCalculatorService] as LTVSvc
  [priceOracle «Singleton»\n(Cached + Simulated)] as Oracle
}

' ─── FACTORIES (Factory Method) ─────────────────────────────────
node "Backend — Factories" {
  [LoanFactory] as LoanFact
  [FixedRateLoanFactory] as FixedFact
  [VariableRateLoanFactory] as VarFact
}

' ─── MODELO ─────────────────────────────────────────────────────
node "Backend — Domain Model" {
  [Offer] as OfferModel
  [Loan] as LoanModel
}

database "PostgreSQL" as PG {
  [tabla: offers] as TblOffers
  [tabla: loans] as TblLoans
}

' ─── PRUEBAS ────────────────────────────────────────────────────
node "Tests (Jest)" {
  [CollateralService.test.js] as ColTest
  [simulateController.test.js] as SimTest
}

' ─── RELACIONES ─────────────────────────────────────────────────
LoanForm   --> LoanCtrl   : POST /api/loans/request · /calculate-ltv · /match/{id}

LoanCtrl   ..> IColat     : «depends on» (requestLoan/calculateLTV)
LoanCtrl   ..> ILoanFact  : «depends on» (matchLoan)
LoanCtrl   ..> LTVSvc     : calculateLTV (static, SRP)

ColSvc     ..|> IColat    : «implements»
ColSvc     ..> IOracle    : «depends on» (DIP)
Oracle     ..|> IOracle   : «implements» (Cached+Simulated)

LoanFact   ..|> ILoanFact : «implements»
FixedFact  ..|> ILoanFact : «implements»
VarFact    ..|> ILoanFact : «implements»
LoanFact   --> FixedFact  : delega (rateType fixed)
LoanFact   --> VarFact    : delega (rateType variable)

LoanCtrl   --> OfferModel : Offer.create (requestLoan)
LoanFact   --> LoanModel  : Loan.create (Factory Method)
OfferModel ..> TblOffers  : INSERT
LoanModel  ..> TblLoans   : INSERT

ColTest    ..> ColSvc     : prueba DIP (oráculo mock)
SimTest    --> LoanCtrl   : prueba /simulate

@enduml
